syntax = "proto3";
package euc_backend;


import "receipt-session/receipt-session.proto";

message ReceiptSessionReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  optional ReceiptSession payload = 4;
}

message ReceiptSessionListDataReply {
  repeated ReceiptSession receipt_session_list = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message ReceiptSessionListReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  ReceiptSessionListDataReply payload = 4;
}
